# dltdojo-cd

./: Cargo.toml  README.md
cd17kkh/: Cargo.toml  README.md  index.html
cd17kkh/src/: lib.rs
cd22/: Dockerfile  README.md
cd22/web080-auth/: d103-authn.tsx  docker-compose.101.yaml
cd22/web090-passkeys/: d102-index.html  d102-register.ts  d102.puml  d103-register.ts  d104-authn.ts  docker-compose.101.yaml  docker-compose.103.yaml
cd22/web100-http-client/: README.md
cd22/web101-http-client/: web101-http-client.puml
cd22/web105-postgres/: .gitignore  d102.ts
cd22/web123-stack/: README.md  docker-compose.101.yaml  docker-compose.103.yaml  docker-compose.104.yaml  docker-compose.105.yaml  output104.txt
cd22/web127-cloudbox/: docker-compose.104.yaml  docker-compose.105.yaml  docker-compose.109.yaml  docker-compose.110.yaml  docker-compose.112.yaml
cd22/web133-nushell/: README.md  foo.nu
cd22/web168-git/: Dockerfile  docker-compose.102.yaml  docker-compose.103.yaml  docker-compose.105.yaml  docker-compose.202.yaml  k206-base.yaml  k206-staging.yaml
cd22/web200-http-server/: README.md
cd22/web222-dagger/: Dockerfile
cd22/web223-proxy-auth/: docker-compose.101.yaml  docker-compose.102.yaml
cd22/web238-deno-web/: d103.tsx  d105.tsx  docker-compose.101.yaml
cd22/web3-todo/: ethereum101.md
cd22/web300-keeper/: Dockerfile  README.md  docker-compose.yaml
cd22/web320-k8s/: docker-compose.105.yaml  docker-compose.106.yaml  k201.yaml  output106.txt  output107.txt
cd22/web325-registry/: README.md  build103.yaml  output101.txt  push101.yaml  push901.yaml
cd22/web333-etcd/: docker-compose.102.yaml  docker-compose.103.yaml  output102.txt  output104.txt
cd22/web345-cypress/: docker-compose.101.yaml
cd22/web346-playwright/: Dockerfile  README.md  docker-compose.101.yaml  docker-compose.102.yaml
cd22/web361-containerd-wasi/: README.md
cd22/web389-wasm-rs/: Dockerfile  docker-compose.103.yaml  docker-compose.105.yaml  docker-compose.110.yaml
cd22/web453-goep/: docker-compose.103.yaml  output.103.txt  output.104.txt
cd22/web500-zk-miden/: README.md  docker-compose.103.yaml  output.103.txt
cd22/web500-zk-miden/zk101/: Cargo.toml
cd22/web500-zk-miden/zk101/src/: lib.rs
cd22/web521-jseditor/: README.md  d103-tpl.ts  d103.ts  d107.ts  docker-compose.103.yaml  docker-compose.104.yaml
cd22/web531-openvscode/: README.md  docker-compose.102.yaml  docker-compose.103.yaml
cd22/web555-polkadot-contract/: Dockerfile  docker-compose.101.yaml
cd22/web703-strapi/: Dockerfile  README.md  docker-compose.102.yaml  docker-compose.103.yaml  output102.txt
cd22/web718-fresh/: README.md  docker-compose.104.yaml  init-tpl-104.ts
cd22/web777-money/: d101-exchange.puml
cd23/: mod.ts
cd23/dafu/: app.ts  appconf.ts  basecli.ts  basecli_test.ts  cli.ts  cliffycli.ts  dockercli.sh  k8s.ts  k8s_test.ts  kind.ts  kind_test.ts  mod.ts  shellscript.ts  utils_cli.ts
cd23/web103-name-service/: README.md  d101.yaml  d102.yaml
cd23/web127-cloudbox/: Dockerfile  README.md  docker-compose.101.yaml  docker-compose.113.yaml
cd23/web240-deno/: README.md  d102.ts  d103.ts  d103_test.ts  d104.ts
cd23/web327-cdk8s/: README.md
cd23/webauthn/: authn101.ts  authn102.ts  authn103-error-browser-import.ts  authn103.ts
ddjcd/: Cargo.toml  READMD.md
ddjcd-lib/: Cargo.toml
ddjcd-lib/src/: lib.rs
ddjcd/src/: httpsvc.rs  main.rs
gendojo25/: README.md
gendojo25/banking-authn-only/: Dockerfile  banking.sh
gendojo25/banking-authnz/: banking.sh
gendojo25/banking-enc-sqlite/: Dockerfile  README.md  banking.sh
gendojo25/banking-sqlite/: README.md
gendojo25/enc-age-sops/: compose.yaml
gendojo25/http-localhost-apk/: README.md  compose.yaml
gendojo25/http-localhost-apk-2/: README.md
gendojo25/http-localhost-node/: README.md
gendojo25/http-localhost-node-2/: README.md  compose.yaml
gendojo25/http-localhost-python-2/: README.md  compose.yaml
gendojo25/http-localhost-ssh-node/: compose.yaml
gendojo25/localhost-ssh-tunnel/: compose.yaml
gendojo25/passwd-argon2/: Dockerfile  README.md  compose-sleep.yaml  users.sh
gendojo25/sqlite-json-http-cgi/: Dockerfile  app.html  app.js  cgi-app.sh
kg8s/: READMD.md
kg8s/napp/napp003-httpserver/: Cargo.toml  README.md
kg8s/napp/napp003-httpserver/public/: index.html
kg8s/napp/napp003-httpserver/public/spec/: index.html  swagger.yaml
kg8s/napp/napp003-httpserver/src/: cmd.rs  ctl.rs  httpsrv.rs  main.rs
kg8s/napp/napp003-httpserver/tests/: common.rs  ctl.rs  test_service.rs
kg8s/napp/napp004-container/napp/: Cargo.toml  README.md
kg8s/napp/napp004-container/napp/k8s/: deployment.yaml  kustomization.yaml
kg8s/napp/napp004-container/napp/public/k8s/gitea/: gitea-sqlite3.yaml
kg8s/napp/napp004-container/napp/public/k8s/gitea/helm/: gitea.yaml  install.yaml  kustomization.yaml  value.yaml
kg8s/napp/napp004-container/napp/public/spec/: index.html  swagger.yaml
kg8s/napp/napp004-container/napp/src/: asset.rs  cmd.rs  ctl.rs  gitops.rs  info.rs  main.rs  srv.rs
kg8s/napp/napp004-container/napp/tests/: common.rs  test_service.rs
kg8s/seed001-pv/: README.md  init.sh
kg8s/seed004-git/: Dockerfile  README.md  init.sh
kg8s/seed005-cd/: README.md  init.sh  justfile
kg8s/seed006-oidc/: README.md  justfile
kg8s/wasm/wasm001/app-ui/: Cargo.toml  README.md  index.html
kg8s/wasm/wasm001/app-ui/src/: main.rs
kg8s/wasm/wasm001/comm/: Cargo.toml  build.rs
kg8s/wasm/wasm001/comm/src/: addrbook.proto  hpke.proto  hpke.rs  hpkeproto.rs  lib.rs  schema.rs
kg8s/wasm/wasm001/comm/src/test-res/: foo-crd.yaml  foo-json-schema.json  foo-openapi-components.yaml
kg8s/wasm/wasm001/wapp/: Cargo.toml  README.md
kg8s/wasm/wasm001/wapp/src/: main.rs  shim.rs
kg8s/wasm/wasm001/wapp/tests/: cli.rs
sk17kkh/: ctap-opensk.md
tian/cd22/: Dockerfile  (+3 more)
(+718 files in other folders)
