[package]
name = "ddjcd-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-bip39 = "0.8"
tiny-hderive = "0.3"
ethsign = {git = "https://github.com/tomusdrw/ethsign" , version = "0.9.0", default-features = false, features = ["pure-rust"]}
hex = "0.4"
hex-literal = "0.3"
fake = { version = "2.4"}
serde = { version = "1.0", features = ["derive"] }