[package]
name = "ddjcd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddjcd-lib = { path = "../ddjcd-lib" }
structopt = "0.3.23"
axum = "0.2"
serde_json = "1.0.68"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"]}