[package]
name = "zk101"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"
miden-prover = { git = "https://github.com/maticnetwork/miden", tag = "v0.3.0",  default-features = false}
miden-assembly = {  git = "https://github.com/maticnetwork/miden",  tag = "v0.3.0" ,default-features = false}

[workspace]