[package]
name = "napp"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.2.2"
clap = { version = "3.1.5", features = ["derive","env"]}
anyhow = "1.0.55"
axum = "0.4.6"
tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
toml = "0.5.8"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tower = { version = "0.4.12", features = ["util", "timeout"] }
tower-http = { version = "0.2.3", features = ["trace", "add-extension"] }
rust-embed = "6.3.0"
mime_guess = { version = "2.0.4" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.136", features = ["derive"] }
ureq = { version = "2.4.0", features = ["json"] }
cmd_lib = "1.3.0"
strum = { version = "0.24", features = ["derive"] }
schemars = "0.8.8"
kube = { version = "0.69.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
once_cell = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"

