[package]
name = "app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
yew = { version = "0.19.3" }
gloo = "0.6"
comm = { path="../comm" }
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
	"HtmlInputElement",
    "console"
]