[package]
name = "wapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.5", features = ["derive","env"]}
comm = { path="../comm" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = "0.24.0"
strum_macros = "0.24.0"

[dev-dependencies]
assert_cmd = "2.0.4"